# secret-scanner

./: NOTES.md  README.md  pyproject.toml
src/secret_scanner/: cli.py  output.py  walker.py
src/secret_scanner/detectors/: __init__.py  entropy.py  regex.py
tests/: test_detector_entropy.py  test_detector_regex.py  test_output.py  test_smoke.py  test_walker.py
